📚  Add Workshop Documentation

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,8 @@ Thumbs.db
 examples/week7/app/build/question-*.html
 graphics
 inbox
+instructor_materials/WORKSHOP.md
+instructor_materials/workshop-instructor_notes.md
 node_modules
 presentations/images
 z-archive
