🍭  Add Test Suite

--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,5 @@ instructor_materials/WORKSHOP.md
 instructor_materials/workshop-instructor_notes.md
 node_modules
 presentations/images
+tests/answer_key
 z-archive
