📚  Alpha|Beta Setup

--- a/.gitignore
+++ b/.gitignore
@@ -51,11 +51,12 @@ Thumbs.db
 *.jpg
 *.png
 *.gif
+/assignments
 examples/week7/app/build/question-*.html
 graphics
 inbox
-instructor_materials/WORKSHOP.md
 instructor_materials/workshop-instructor_notes.md
+instructor_materials/WORKSHOP.md
 node_modules
 presentations/images
 tests/answer_key
